--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NModbus4.Core" Version="1.0.2" />
+  </ItemGroup>
+
 </Project>
