增加任务管理增加单元测试

--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -3,13 +3,20 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net7.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Krypton.Toolkit.Lite" Version="70.22.11.312" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NModbus4.Core" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AsynchronousExecutor\AsynchronousExecutor.csproj" />
+    <ProjectReference Include="..\Presenter\Presenter.csproj" />
   </ItemGroup>
 
 </Project>
